Fix scrollbar bug

--- a/styles.css
+++ b/styles.css
@@ -1086,6 +1086,10 @@ a {
   overflow: scroll;
 }
 
+.socials::-webkit-scrollbar {
+  display: none;
+}
+
 .twitter {
   margin-left: 0;
 }
